--- a/react-app/src/components/HomPage/homepage.css
+++ b/react-app/src/components/HomPage/homepage.css
@@ -28,7 +28,6 @@
   margin-right: 8rem;
 }
 
-
 .hompage-title {
   display: flex;
   flex-direction: column;
@@ -44,6 +43,14 @@
   font-weight: 550;
   color: white;
   text-shadow: 3px 3px rgb(23, 23, 23);
+}
+
+.welcome-img{
+  width: 73.1rem;
+  height: 40rem;
+  object-fit: cover;
+  margin-left: 8rem;
+  margin-right: 8rem;
 }
 
 .homepage-welcome-container {
