--- a/react-app/src/components/HomPage/homepage.css
+++ b/react-app/src/components/HomPage/homepage.css
@@ -46,8 +46,12 @@
 }
 
 .welcome-img{
-  width: 73.1rem;
-  height: 40rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 72.9rem;
+  height: 35rem;
   object-fit: cover;
   margin-left: 8rem;
   margin-right: 8rem;
@@ -57,7 +61,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: -2rem;
   margin-bottom: 4rem;
 }
 
