--- a/react-app/src/components/HomPage/homepage.css
+++ b/react-app/src/components/HomPage/homepage.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: rgb(48,48,48);
+  background-color: rgb(48, 48, 48);
 }
 
 .hompage-wrapper {
@@ -19,7 +19,7 @@
   padding: 50px;
 }
 
-.hompage-title-container{
+.hompage-title-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +45,7 @@
   text-shadow: 3px 3px rgb(23, 23, 23);
 }
 
-.welcome-img{
+.welcome-img {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -100,14 +100,14 @@
   margin-bottom: 30px;
 }
 
-.homepage-service-info-container{
+.homepage-service-info-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 4rem;
 }
 
-.atl-cap-pic{
+.atl-cap-pic {
   object-fit: cover;
   width: 36rem;
   border-radius: 5px;
@@ -120,7 +120,7 @@
   gap: 2rem;
 }
 
-.service-info-section{
+.service-info-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -130,12 +130,12 @@
   border-radius: 3px;
 }
 
-.services-info-title{
+.services-info-title {
   font-size: 28px;
   color: white;
 }
 
-.services-info-inner{
+.services-info-inner {
   display: flex;
   flex-direction: column;
   gap: 3px;
@@ -144,13 +144,13 @@
   color: rgb(30, 30, 30);
 }
 
-.service-button-section{
+.service-button-section {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.view-services-bttn{
+.view-services-bttn {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -166,7 +166,7 @@
   color: black;
 }
 
-.view-services-bttn:hover{
+.view-services-bttn:hover {
   border: 2px solid gray;
   background-color: grey;
   color: white;
@@ -176,19 +176,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
   margin-top: 20px;
-
-  border: 1px solid orange;
+  margin-bottom: 4rem;
 }
 
 .homepage-call-us-p1 {
-  font-size: 20px;
+  font-size: 40px;
   font-weight: 550;
   color: rgb(197, 150, 33);
 }
 
 .homepage-call-us-p2 {
+  font-size: 18px;
   margin-top: 10px;
+}
+
+.phone-icon-dec-container {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
+.phone-border-dec {
+  font-size: 20px;
+  color: rgb(197, 150, 33);
 }
 
 .hompage-phone-icon {
@@ -198,21 +210,64 @@
 }
 
 .homepage-call-us-num {
+  font-size: 18px;
   margin-top: 10px;
+}
+
+.contact-bttn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 12px;
+
+  width: 10rem;
+  border: 2px solid gray;
+  border-radius: 5px;
+  padding: 14px;
+
+  font-size: 18px;
+  text-decoration: none;
+  color: black;
+}
+
+.contact-bttn:hover {
+  border: 2px solid gray;
+  background-color: grey;
+  color: white;
 }
 
 .hompage-contact-email-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 4rem;
+
+  background-color: rgb(197, 150, 33);;
+  padding: 40px;
+  border-radius: 5px;
 }
 
 .hompage-contact-email-message-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
+  width: 30rem;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.hompage-contact-email-message-title{
+  font-size: 40px;
+  font-weight: 550;
+  color: white;
+}
+
+.hompage-contact-email-message{
+  font-size: 18px;
 }
 
 .contact-email-form-wrapper {
@@ -233,7 +288,7 @@
 }
 
 .contact-email-input-field {
-  width: 50rem;
+  width: 30rem;
   height: 2rem;
   border-radius: 3px;
   border: solid .1rem black;
@@ -242,7 +297,7 @@
 }
 
 .contact-email-input-field-select {
-  width: 51.2rem;
+  width: 31.2rem;
   height: 2.5rem;
   border-radius: 3px;
   border: solid .1rem black;
@@ -251,8 +306,8 @@
 }
 
 .contact-email-input-field-question {
-  min-width: 50rem;
-  max-width: 50rem;
+  min-width: 30rem;
+  max-width: 30rem;
   height: 4rem;
   min-height: 4rem;
   max-height: 15rem;
@@ -276,11 +331,18 @@
   margin-top: 10px;
 }
 
+.amer-flag-pic{
+  width: 30rem;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
 .footer-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap:70px;
+  gap: 70px;
   margin-left: 8rem;
   margin-right: 8rem;
   padding: 30px;
@@ -326,6 +388,5 @@
   object-fit: cover;
   width: 25rem;
   height: 15rem;
-  border: 2px solid rgb(197, 150, 33);
   border-radius: 5px;
 }
