--- a/react-app/src/components/HomPage/homepage.css
+++ b/react-app/src/components/HomPage/homepage.css
@@ -45,16 +45,23 @@
   text-shadow: 3px 3px rgb(23, 23, 23);
 }
 
+.hompage-img-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 8rem;
+  margin-right: 8rem;
+  background-color: white;
+}
+
 .welcome-img {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 72.9rem;
+  width: 100%;
   height: 35rem;
   object-fit: cover;
-  margin-left: 8rem;
-  margin-right: 8rem;
 }
 
 .homepage-welcome-container {
