--- a/react-app/src/components/HomPage/homepage.css
+++ b/react-app/src/components/HomPage/homepage.css
@@ -8,50 +8,14 @@
   background-color: rgb(48, 48, 48);
 }
 
-.hompage-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 8rem;
-  margin-right: 8rem;
-  height: 100%;
-  background-color: white;
-  padding: 50px;
-}
-
-.hompage-title-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: 8rem;
-  margin-right: 8rem;
-}
-
-.hompage-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-  margin-left: 8rem;
-  margin-right: 8rem;
-  background-color: rgb(197, 150, 33);
-  height: 10rem;
-
-  font-size: 48px;
-  font-weight: 550;
-  color: white;
-  text-shadow: 3px 3px rgb(23, 23, 23);
-}
 
 .hompage-img-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 8rem;
-  margin-right: 8rem;
-  background-color: white;
+  padding-left: 6rem;
+  padding-right: 6rem;
+  background-color: rgb(48, 48, 48);
 }
 
 .welcome-img {
@@ -64,11 +28,23 @@
   object-fit: cover;
 }
 
+.hompage-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  background-color: white;
+}
+
 .homepage-welcome-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-bottom: 4rem;
+  padding-top: 50px;
+  padding-left: 8rem;
+  padding-right: 8rem;
+
 }
 
 .welcome-message-container {
@@ -76,6 +52,10 @@
   flex-direction: column;
   justify-content: center;
   font-size: 18px;
+  border-top: 2px solid rgb(197, 150, 33);
+  border-bottom: 2px solid rgb(197, 150, 33);
+  padding-top: 26px;
+  padding-bottom: 26px;
 }
 
 .welcome-message-p1 {
@@ -94,8 +74,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  padding-top: 50px;
+  padding-bottom: 70px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-bottom: 4rem;
+  background-color: rgb(48, 48, 48);
 }
 
 .hompage-services-title {
@@ -116,7 +102,7 @@
 
 .atl-cap-pic {
   object-fit: cover;
-  width: 36rem;
+  width: 34rem;
   border-radius: 5px;
 }
 
@@ -132,8 +118,9 @@
   flex-direction: column;
   align-items: center;
   gap: 12px;
+  width: 23rem;
   background-color: rgb(197, 150, 33);
-  padding: 28px;
+  padding: 30px;
   border-radius: 3px;
 }
 
@@ -145,7 +132,7 @@
 .services-info-inner {
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  gap: 10px;
   list-style-type: none;
   font-size: 18px;
   color: rgb(30, 30, 30);
@@ -170,7 +157,7 @@
 
   font-size: 18px;
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .view-services-bttn:hover {
@@ -345,14 +332,21 @@
   border-radius: 5px;
 }
 
+.homepage-membership-pics-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin-bottom: 40px;
+}
+
 .footer-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 70px;
-  margin-left: 8rem;
-  margin-right: 8rem;
-  padding: 30px;
+  gap: 50px;
+  padding: 50px;
 
   background-color: rgb(22, 22, 22);
   color: rgb(120, 120, 120);
