--- a/react-app/src/components/AttorneyPage/attorneyPage.css
+++ b/react-app/src/components/AttorneyPage/attorneyPage.css
@@ -5,24 +5,22 @@
     width: 100%;
     height: 100%;
 
-    background-color: rgb(48,48,48);
+    background-color: rgb(48, 48, 48);
 }
 
-.attorney-title-container{
+.attorney-title-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 10rem;
-    margin-left: 8rem;
-    margin-right: 8rem;
     background-color: grey
 }
 
-.attorney-title-bg{
+.attorney-title-bg {
     z-index: 1;
-    width: 73.2rem;
-    height: 16rem;
+    width: 100%;
+    height: 18rem;
     object-fit: cover;
     filter: grayscale(80%);
     opacity: 0.5;
@@ -31,7 +29,7 @@
     transform: scaleX(-1)
 }
 
-.attorney-title-info-container{
+.attorney-title-info-container {
     display: flex;
     flex-direction: row;
     position: absolute;
@@ -39,42 +37,38 @@
     gap: 10rem;
 }
 
-.attorney-title-left{
+.attorney-title-left {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.attorney-title-name{
+.attorney-title-name {
     font-size: 48px;
     font-weight: bold;
     color: rgb(197, 150, 33);
     text-shadow: 3px 3px rgb(66, 66, 66);
 }
 
-.attorney-title-description{
+.attorney-title-description {
     font-size: 20px;
     font-weight: bold;
     color: white;
     text-shadow: 3px 3px rgb(66, 66, 66)
 }
 
-.attorney-title-right{
-
-}
-
 .attorney-page-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 8rem;
-    margin-right: 8rem;
     height: 100%;
     background-color: white;
-    padding: 50px;
+    padding-left: 8rem;
+    padding-right: 8rem;
+    padding-top: 2rem;
 }
 
-.attorney-quote-container{
+.attorney-quote-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -82,99 +76,155 @@
     margin-bottom: 30px;
 }
 
-.attorney-quote{
+.attorney-quote {
     font-size: 32px;
     color: rgb(197, 150, 33);
 }
 
-.attorney-quote-name{
+.attorney-quote-name {
     font-size: 24px;
     margin-left: 34rem;
     color: grey;
 }
 
+.attorney-border-dec {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: rgb(197, 150, 33);
+  }
+
 .attorney-profile-container {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    margin-top: 30px;
+    gap: 28px;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
 }
 
 .attorney-profile-pic {
-    width: 280px;
-    height: 400px;
+    width: 300px;
+    height: 440px;
     border-radius: 10px;
     object-fit: cover;
 }
 
-.attorney-profile-wrapper-right{
+.attorney-profile-wrapper-right {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
 .attorney-profile-title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 550;
     color: rgb(197, 150, 33);
     margin-bottom: 10px;
 }
 
-.attorney-profile-desc-container{
+.attorney-profile-desc-container {
     display: flex;
     flex-direction: column;
     gap: 12px;
     margin-bottom: 20px;
+    font-size: 18px;
 }
 
-.attorney-experience-container{
+.attorney-experience-container {
     display: flex;
     flex-direction: row;
     gap: 60px;
+    font-size: 18px;
 }
 
-.attorney-education-container{
+.attorney-education-container {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.attorney-education-title{
-    font-size: 18px;
+.attorney-education-title {
+    font-size: 22px;
     font-weight: 550;
     color: rgb(197, 150, 33);
 }
 
-.attorney-membership-container{
+.attorney-membership-container {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.attorney-membership-title{
-    font-size: 18px;
+.attorney-membership-title {
+    font-size: 22px;
     font-weight: 550;
     color: rgb(197, 150, 33);
 }
 
-.attorney-membership-pics-container{
+.attorney-call-us-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.attorney-call-us-p1{
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(197, 150, 33);
+}
+
+.attorney-call-us-p2{
+    font-size: 18px;
+}
+
+.attorney-contact-bttn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 12px;
+
+    width: 8rem;
+    background-color: rgb(197, 150, 33);
+    border: 2px solid rgb(197, 150, 33);
+    border-radius: 5px;
+    padding: 10px;
+
+    font-size: 18px;
+    text-decoration: none;
+    color: white;
+  }
+
+  .attorney-contact-bttn:hover {
+    border: 2px solid gray;
+    background-color: grey;
+    color: white;
+  }
+
+.attorney-membership-pics-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 50px;
-    margin-top: 60px;
+    margin-top: 2rem;
     margin-bottom: 40px;
 }
 
-.amer-imm-law-pic{
+.amer-imm-law-pic {
     width: 240px;
 }
 
-.ga-bar-pic{
+.ga-bar-pic {
     width: 240px;
 }
 
-.amer-bar-pic{
+.amer-bar-pic {
     width: 240px;
 }
