--- a/react-app/src/components/HomPage/homepage.css
+++ b/react-app/src/components/HomPage/homepage.css
@@ -254,17 +254,17 @@
   margin-bottom: 20px;
 }
 
-.hompage-contact-email-message-title{
+.hompage-contact-email-message-title {
   font-size: 40px;
   font-weight: 550;
   color: white;
 }
 
-.hompage-contact-email-message{
+.hompage-contact-email-message {
   font-size: 18px;
 }
 
-.form-req-mes{
+.form-req-mes {
   display: flex;
   flex-direction: row;
   justify-content: right;
@@ -353,14 +353,14 @@
   color: white;
 }
 
-.amer-flag-pic{
+.amer-flag-pic {
   width: 30rem;
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
 }
 
-.homepage-membership-pics-container{
+.homepage-membership-pics-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -374,7 +374,10 @@
   flex-direction: row;
   justify-content: center;
   gap: 50px;
-  padding: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+  padding-right: 80px;
 
   background-color: rgb(22, 22, 22);
   color: rgb(120, 120, 120);
@@ -402,12 +405,12 @@
   color: rgb(225, 225, 225)
 }
 
-.footer-nav-link{
+.footer-nav-link {
   text-decoration: none;
   color: gray;
 }
 
-.footer-nav-link:hover{
+.footer-nav-link:hover {
   color: rgb(197, 150, 33);
 }
 
