--- a/react-app/src/components/PracticePage/practicePage.css
+++ b/react-app/src/components/PracticePage/practicePage.css
@@ -12,11 +12,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 8rem;
-    margin-right: 8rem;
     height: 100%;
     background-color: white;
-    padding: 50px;
+    padding-left: 8rem;
+    padding-right: 8rem;
+    padding-top: 2rem;
 }
 
 .practice-area-title-container{
@@ -24,15 +24,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 8rem;
-    margin-right: 8rem;
     background-color: black;
 }
 
 .practices-title-bg{
     z-index: 1;
-    width: 73.2rem;
-    height: 16rem;
+    width: 100%;
+    height: 18rem;
     object-fit: cover;
     filter: grayscale(80%);
     opacity: 0.5;
@@ -59,14 +57,14 @@
 }
 
 .us-immigration-title{
-    font-size: 25px;
+    font-size: 28px;
     font-weight: 550;
     color: rgb(197, 150, 33);
     margin-bottom: 10px;
 }
 
 .us-immigration-pic{
-    width: 100%;
+    width: 71.5rem;
     height: 22rem;
     object-fit: cover;
     border-radius: 5px;
@@ -80,6 +78,7 @@
     width: 100%;
     padding-left: 45px;
     margin-top: 20px;
+    font-size: 18px;
 }
 
 .employ-base-app-container{
@@ -90,7 +89,7 @@
 }
 
 .imm-type-title{
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 550;
     color: rgb(197, 150, 33);
     margin-bottom: 5px;
@@ -122,10 +121,11 @@
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
+    font-size: 18px;
 }
 
 .business-law-pic{
-    width: 32rem;
+    width: 35rem;
     height: 20rem;
     object-fit: cover;
     border-radius: 5px;
@@ -138,7 +138,7 @@
 }
 
 .family-law-pic{
-    width: 32rem;
+    width: 35rem;
     height: 20rem;
     object-fit: cover;
     border-radius: 5px;
