--- a/react-app/src/components/ResourcesPage/resourcesPage.css
+++ b/react-app/src/components/ResourcesPage/resourcesPage.css
@@ -11,11 +11,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 8rem;
-    margin-right: 8rem;
     height: 100%;
     background-color: white;
-    padding: 50px;
+    padding-left: 8rem;
+    padding-right: 8rem;
+    padding-top: 2rem;
 }
 
 .resources-title-container{
@@ -23,15 +23,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 8rem;
-    margin-right: 8rem;
     background-color: black;
 }
 
+
 .resources-title-bg{
     z-index: 1;
-    width: 73.2rem;
-    height: 16rem;
+    width: 100%;
+    height: 18rem;
     object-fit: cover;
     filter: grayscale(80%);
     opacity: 0.5;
@@ -53,11 +52,14 @@
 .resources-links-container{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 22px;
     margin-left: 40px;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
 }
 
 .resources-links{
     width: fit-content;
+    font-size: 18px;
+    text-decoration: underline;
+    color: rgb(197, 150, 33);
 }
