--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -1,9 +1,9 @@
-.nav-container{
+.nav-container {
     display: flex;
     flex-direction: column;
 }
 
-.nav-contact-info{
+.nav-contact-info {
     display: flex;
     flex-direction: row;
     justify-content: right;
@@ -13,20 +13,25 @@
     font-size: 15px;
 }
 
-.nav-wrapper{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 12rem;
-    margin-right: 12rem;
+.nav-contact-us-link {
+    text-decoration: underline;
+    color: rgb(197, 150, 33);
 }
 
-.logo-container{
+.nav-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.logo-container {
     display: flex;
     flex-direction: row;
     align-items: center;
     text-decoration: none;
+    margin-right: 20px;
 }
 
 .nav-logo {
@@ -34,15 +39,16 @@
     height: 150px;
 }
 
-.logo-text-container{
+.logo-text-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 20px;
+
+    font-size: 22px;
     color: rgb(197, 150, 33);
 }
 
-.nav-pages-bttn-container{
+.nav-pages-bttn-container {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -50,13 +56,34 @@
 
 }
 
-.nav-attorney-link{
+.nav-attorney-link {
+    font-size: 18px;
     text-decoration: none;
     color: rgb(197, 150, 33);
 }
 
-.chinese-trans-bttn{
-    padding: 3px;
-    border: 1px solid green;
+.chinese-trans-bttn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-left: 20px;
+    padding: 5px;
+    border: 1.5px solid rgb(197, 150, 33);
     border-radius: 5px;
+}
+
+.chinese-trans-bttn:hover {
+    cursor: pointer;
+    color: white;
+    background-color: rgb(197, 150, 33);
+}
+
+.chinese-icon {
+    width:26px
+}
+
+.chinese-txt {
+    font-size: 16px;
 }
